compiler/startup/SmallCodeCacheStartup.java timed out in RT_Baseline

XMLWordPrintable

    • b07
    • 9
    • b14

            Timed out on Solaris x64 after 16 minutes. No further information is available in the log.
          
            Host: vm-v20z-4, AMD x86 2390 MHz, 2 cores, 4G, Solaris / Solaris 10, i86pc
            Options: -server -Xmixed -XX:MaxRAMFraction=8 -XX:+CreateMinidumpOnCrash -XX:+IgnoreUnrecognizedVMOptions -XX:-UseCompressedOops -XX:ReservedCodeCacheSize=256M

              Assignee:
              Albert Noll (Inactive)
              Reporter:
              Peter Allwin (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: