8040798: compiler/startup/SmallCodeCacheStartup.java timed out in RT_Baseline

Fixes broken memory freeing of compile queue tasks and makes sure that blocking compiles do not hang the VM if compilation gets disabled due to a full code cache.

Reviewed-by: kvn, iveresov